tests/negative/neg_pr118c2_decl_after_statement.safe
package neg_pr118c2_decl_after_statement

   print ("hello")
   value : integer = 0;
